--- a/about.html
+++ b/about.html
@@ -32,6 +32,6 @@
      their dream home. It strives to start from point 0 with each and every client, building one step at a time so as to ensure the 
      successful completion of the project and full satisfaction of the client. As of now, we are made up of a staff of 85 wonderful 
      personnel who are dedicated to their love of helping the clients find their dream homes.<br></br> 
-     <img src="images/Ranch-style.jpeg" alt="images" class="center">
-     <img src="images/Bungalow.jpeg" alt="images" class="margin-right"></p>
+     <img src="images/Ranch-style.jpeg" alt="images" class="center" width="35%">
+     <img src="images/Bungalow.jpeg" alt="images" class="margin-right" width="35%"></p>
 </html>
