--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,6 @@
     LivingbyLel@gmail.com<br></br>
     +2540 00000000<br></br>
     1st Western Avenue off Krish Street.<br></br>
-    <img src="images/Townhouse.jpeg" alt="images" class="margin-left">
+    <img src="images/Townhouse.jpeg" alt="images" class="margin-left" width="35%">
 </p>
 </html>
