--- a/design.html
+++ b/design.html
@@ -41,7 +41,7 @@
     Colonial<br></br>
     Victorian<br></br>
     Country.<br></br>
-    <img src="images/Victorian.jpeg" alt="images" class="margin-right">
-    <img src="images/Country.jpeg" alt="images" class="center">
+    <img src="images/Victorian.jpeg" alt="images" class="margin-right" width="35%">
+    <img src="images/Country.jpeg" alt="images" class="center" width="35%">
 </p>
 </html>
