--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
   <h1> Welcome to LivingbyL</h1>
 </body> 
 <p> Lovely to see you explore LivingbyL. Welcome!<br></br>
-    <img src="images/Cottage.jpeg" alt="images" class="center">
+    <img src="images/Cottage.jpeg" alt="images" class="center" width="35%">
 </p>
 </html>
