--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,9 @@
      apartments<br></br>
      All this being said, we are always open to new ideas from our clientelle, and we do our best to 
      accomodate all their needs. <br></br>
-     <img src="images/Craftsman.jpeg" alt="images" class="margin-right">
-     <img src="images/Mid century modern.jpeg" alt="images" class="margin-right">
-     <img src="images/Georgian.jpeg" alt="images" class="center">
-     <img src="images/Contemporary.jpeg" alt="images" class="margin-left">
+     <img src="images/Craftsman.jpeg" alt="images" class="margin-right" width="35%">
+     <img src="images/Mid century modern.jpeg" alt="images" class="margin-right" width="35%">
+     <img src="images/Georgian.jpeg" alt="images" class="center" width="35%">
+     <img src="images/Contemporary.jpeg" alt="images" class="margin-left" width="35%">
     </p>
 </html>
