--- a/area.html
+++ b/area.html
@@ -31,7 +31,7 @@
 <p>Over the past 4 years we have grown a lot, and have ventured into many exciting projects. We have built houses in almost every part of 
     the country and also on different terrain. So far, we have covered the surbaban area, the mountains, the hills, the beach and also the
      city. We look forward to new adventures as we continue to build for you.<br></br>
-     <img src="images/Mid century modern.jpeg" alt="images" class="margin-right">
-     <img src="images/Mediterranean.jpeg" alt="images" class="margin-left">
+     <img src="images/Mid century modern.jpeg" alt="images" class="margin-right" width="35%">
+     <img src="images/Mediterranean.jpeg" alt="images" class="margin-left" width="35%">
 </p>
 </html>
