--- a/help.html
+++ b/help.html
@@ -30,6 +30,6 @@
 </body>
 <p>If you need any help, kindly ask our 24 hour customer service at LbLCustomer@gmail.com.<br></br>
     Have a lovely day ahead!<br></br>
-    <img src="images/Colonial.jpeg" alt="images" class="margin-right">
+    <img src="images/Colonial.jpeg" alt="images" class="margin-right" width="35%">
 </p>
 </html>
