added a footer to my help page

--- a/help.html
+++ b/help.html
@@ -32,5 +32,10 @@
     Have a lovely day ahead!<br></br>
     <img src="images/Colonial.jpeg" alt="images" class="margin-right" width="35%">
 </p>
+<footer>
+    <p>Author: L<br>
+    <p>&copy; 2024 LivingbyL. All rights reserved.</p>
+    <a href="Please follow us LbLCustomer@gmail.com">LbLCustomer@gmail.com</a></p>
+  </footer>
 </body>
 </html>
