changes to the help web page

--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
 <footer>
     <p>Author: L<br>
     <p>&copy; 2024 LivingbyL. All rights reserved.</p>
-    <a href="Please follow us LbLCustomer@gmail.com">LbLCustomer@gmail.com</a></p>
+    <a href="LivingbyL: LbLCustomer@gmail.com">LbLCustomer@gmail.com</a></p>
   </footer>
 </body>
 </html>
