--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </style>
 </head>
 <body>
-<a href="index.html">Home</a> | <a href="about.html">About Us</a> | <a href="area.html">Area</a> | <a href="projects.html">Projects</a> |
- <a href="design.html">Design</a> | <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
+<a href="index.html">Home</a> | <a href="about.html">About Us</a> |
+ <a href="registration.html">Registration</a> | <a href="area.html">Area</a> |
+  <a href="projects.html">Projects</a> | <a href="design.html">Design</a> |
+   <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
   <h1> Welcome to LivingbyL</h1> 
 <p> Lovely to see you explore LivingbyL. Welcome!<br></br>
     <img src="images/Cottage.jpeg" alt="images" class="center" width="35%">
