--- a/about.html
+++ b/about.html
@@ -25,8 +25,10 @@
         </style>
 </head>
 <body>
-<a href="index.html">Home</a> | <a href="about.html">About Us</a> | <a href="area.html">Area</a> | <a href="projects.html">Projects</a> |
- <a href="design.html">Design</a> | <a href="contact.html">Contact Us</a> |  <a href="help.html">Help</a>
+    <a href="index.html">Home</a> | <a href="about.html">About Us</a> |
+    <a href="registration.html">Registration</a> | <a href="area.html">Area</a> |
+     <a href="projects.html">Projects</a> | <a href="design.html">Design</a> |
+      <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
  <h1> What about us?</h1>
 <p>Established 4 years ago, LivingbyL is an organisation created soley for the purpose of giving every beautiful person a chance to create
      their dream home. It strives to start from point 0 with each and every client, building one step at a time so as to ensure the 
