--- a/area.html
+++ b/area.html
@@ -25,8 +25,10 @@
         </style>
 </head>
 <body>
-<a href="index.html">Home</a> | <a href="about.html">About Us</a> | <a href="area.html">Area</a> | <a href="projects.html">Projects</a> |
- <a href="design.html">Design</a> | <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
+    <a href="index.html">Home</a> | <a href="about.html">About Us</a> |
+    <a href="registration.html">Registration</a> | <a href="area.html">Area</a> |
+     <a href="projects.html">Projects</a> | <a href="design.html">Design</a> |
+      <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
  <h1> Where do we build?</h1>
 <p>Over the past 4 years we have grown a lot, and have ventured into many exciting projects. We have built houses in almost every part of 
     the country and also on different terrain. So far, we have covered the surbaban area, the mountains, the hills, the beach and also the
