--- a/design.html
+++ b/design.html
@@ -25,8 +25,10 @@
         </style>
 </head>
 <body>
-<a href="index.html">Home</a> | <a href="about.html">About Us</a> | <a href="area.html">Area</a> | <a href="projects.html">Projects</a> |
- <a href="design.html">Design</a> | <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
+    <a href="index.html">Home</a> | <a href="about.html">About Us</a> |
+    <a href="registration.html">Registration</a> | <a href="area.html">Area</a> |
+     <a href="projects.html">Projects</a> | <a href="design.html">Design</a> |
+      <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
  <h1> What designs have we accomplished so far?</h1>
 <p>We have done many designs as our client profile is very diverse. Some of the designs that we have done include:<br></br>
     Craftsman<br></br>
