--- a/help.html
+++ b/help.html
@@ -25,8 +25,10 @@
         </style>
 </head>
 <body>
-<a href="index.html">Home</a> | <a href="about.html">About Us</a> | <a href="area.html">Area</a> | <a href="projects.html">Projects</a> |
- <a href="design.html">Design</a> | <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
+    <a href="index.html">Home</a> | <a href="about.html">About Us</a> |
+    <a href="registration.html">Registration</a> | <a href="area.html">Area</a> |
+     <a href="projects.html">Projects</a> | <a href="design.html">Design</a> |
+      <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>
  <h1> Do you need any help?</h1>
 <p>If you need any help, kindly ask our 24 hour customer service at LbLCustomer@gmail.com.<br></br>
     Have a lovely day ahead!<br></br>
