adding a registration table

--- a/registration.html
+++ b/registration.html
@@ -28,5 +28,49 @@
     <a href="registration.html">Registration</a> | <a href="area.html">Area</a> |
      <a href="projects.html">Projects</a> | <a href="design.html">Design</a> |
       <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>  
+      <h1> Would you like to register?</h1>
+    <p>Registration is not a force on your hand to build a home.<br></br>
+        It is simply a way of guaranteeing yourself fast and efficient service if and when you decide you want to embark in this new journey.
+        <table >
+            
+            <tr>
+                <th>Name</th>
+                <th>House Type</th>
+                <th>Location</th>
+                <th>Budget</th>
+            </tr>
+
+            <tr>
+                <td>Estella Mwikali</td>
+                <td>Contemporary</td>
+                <td>Argyle Avenue</td>
+                <td>300,000,000</td>
+            </tr>
+
+            <tr>
+                <td>Chelsea Kanini</td>
+                <td>Country</td>
+                <td>Swile City</td>
+                <td>400,000,000</td>
+            </tr>
+
+            <tr>
+                <td>Allan Maxwell</td>
+                <td>Mediterranean</td>
+                <td>Venezuelan Beach</td>
+                <td>50,000,000</td>
+            </tr>
+
+            <tr>
+                <td>Julian Ndegwa</td>
+                <td>Victorian</td>
+                <td>The Alps</td>
+                <td>30,000,000</td>
+            </tr>
+ 
+        </table>
+
+    </p>
+
 </body>
 </html>
