Added details on table

--- a/registration.html
+++ b/registration.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LivingbyL</title>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body{
-            background: color cfcfc 4px;;
+            background-color: rgb(20, 79, 66);
         }
         .center{
             display: block;
@@ -30,7 +31,8 @@
       <a href="contact.html">Contact Us</a> | <a href="help.html">Help</a>  
       <h1> Would you like to register?</h1>
     <p>Registration is not a force on your hand to build a home.<br></br>
-        It is simply a way of guaranteeing yourself fast and efficient service if and when you decide you want to embark in this new journey.
+        It is simply a way of guaranteeing yourself fast and efficient service if and when you decide you want to embark in this new journey.<br></br>
+        We would love it if you could consider embarking on this exciting joourney with us.
         <table >
             
             <tr>
