--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body{
-            background-color: rgb(20, 79, 66);
+            background-color: navy;
         }
         .center{
             display: block;
@@ -16,11 +16,11 @@
         }
         h1{
             text-align: center;
-            color:black;
+            color: whitesmoke;
         }
         p{
             text-align:left;
-            color:black;
+            color:white;
         }
         </style>
 </head>
@@ -32,7 +32,7 @@
       <h1> Would you like to register?</h1>
     <p>Registration is not a force on your hand to build a home.<br></br>
         It is simply a way of guaranteeing yourself fast and efficient service if and when you decide you want to embark in this new journey.<br></br>
-        We would love it if you could consider embarking on this exciting joourney with us.
+        We would love it if you could consider embarking on this exciting journey with us.
         <table >
             
             <tr>
