added a div link to my registration

--- a/registration.html
+++ b/registration.html
@@ -22,6 +22,13 @@
             text-align:left;
             color:white;
         }
+
+        div{
+            margin:auto;
+            background-color:rgb(220, 211, 211);
+            text-align: center;
+        }
+
         </style>
 </head>
 <body>
