changed my website view

--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body{
-            background-color: navy;
+            background-color:gray;
         }
         .center{
             display: block;
@@ -16,16 +16,16 @@
         }
         h1{
             text-align: center;
-            color: whitesmoke;
+            color:navy;
         }
         p{
             text-align:left;
-            color:white;
+            color:black;
         }
 
         div{
             margin:auto;
-            background-color:rgb(220, 211, 211);
+            background-color:rgb(243, 235, 235);
             text-align: center;
         }
 
