--- a/registration.html
+++ b/registration.html
@@ -29,6 +29,12 @@
             text-align: center;
         }
 
+        div{
+            margin:auto;
+            background-color:rgb(243, 235, 235);
+            text-align: center;
+        }
+
         </style>
 </head>
 <body>
