--- a/area.html
+++ b/area.html
@@ -22,6 +22,13 @@
             text-align:left;
             color:black;
         }
+        
+        div{
+            margin:auto;
+            background-color:rgb(243, 235, 235);
+            text-align: center;
+        }
+
         </style>
 </head>
 <body>
