--- a/registration.html
+++ b/registration.html
@@ -79,6 +79,25 @@
  
         </table>
 
+        <form>
+            Full name : </br>
+            <input type="text" name="fullname"/><br/><br/><br/> 
+            Budget : </br>
+            <input type="text" name="username"/><br/><br/><br/>
+            Password :</br> 
+            <input type="password" name="password"/><br/><br/><br/>
+            Date of Birth :</br>
+            <input type="date" name="date of birth"/>/><br/><br/><br/>
+            <select name="gender">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="prefer not to say">Prefer not to say</option>
+            </select><br/><br/><br/>
+
+    
+            <input type="submit" name="Submit" value="Submit"/>
+        </form>
+
     </p>
 
 </body>
