added a description box

--- a/registration.html
+++ b/registration.html
@@ -93,7 +93,9 @@
                 <option value="female">Female</option>
                 <option value="prefer not to say">Prefer not to say</option>
             </select><br/><br/><br/>
-
+            Description:</br>
+            <textarea rows="5" cols="50" name="bio" placeholder="Enter bio here..."></textarea></br>
+    
     
             <input type="submit" name="Submit" value="Submit"/>
         </form>
