--- a/registration.html
+++ b/registration.html
@@ -94,8 +94,9 @@
                 <option value="prefer not to say">Prefer not to say</option>
             </select><br/><br/><br/>
             Description:</br>
-            <textarea rows="5" cols="50" name="bio" placeholder="Enter bio here..."></textarea></br>
-    
+            <textarea rows="5" cols="50" name="description" placeholder="Enter description here..."></textarea></br>
+            <input type="submit" name="Submit" value="Submit"/>
+            </form>
     
             <input type="submit" name="Submit" value="Submit"/>
         </form>
