--- a/area.html
+++ b/area.html
@@ -4,31 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LivingbyL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/area.css">
     <style>
-        body{
-            background-color:darkkhaki;
-        }
-        .center{
-            display: block;
-            margin-right: auto;
-            margin-left: auto;
-        }
-        h1{
-            text-align: center;
-            color:saddlebrown;
-        }
-        p{
-            text-align:left;
-            color:black;
-        }
-        
-        div{
-            margin:auto;
-            background-color:rgb(243, 235, 235);
-            text-align: center;
-        }
-
+       
         </style>
 </head>
 <body>
